public interface ContratacaoStrategy {
    boolean podeContratar(Time time, Jogador candidato);
}
