public class Manchete {
    private final String titulo;
    private final String corpo;

    public Manchete(String titulo, String corpo) {
        this.titulo = titulo;
        this.corpo = corpo;
    }

    public String getTitulo() { return titulo; }
    public String getCorpo() { return corpo; }
}
