public interface MembroTime {
    String getNome();
    double getCusto();
    void imprimir(String prefixo);
}