public interface ObservadorNoticia {
    void atualizar(Manchete manchete);
}
